--- a/index.html
+++ b/index.html
@@ -34,7 +34,61 @@
       src="https://kit.fontawesome.com/028b7452d5.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <img src="/imgs/profile.jpg" alt="Profile picture" width="30px" />
+      <a class="navbar-brand" href="#">Anna Vans</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Homepage <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" title="Informations about me"
+              >About me</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" title="Informations about my work"
+              >What I do</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" title="COntact page">Contact me</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <h2>Welcome,</h2>
+    <h1>I'm Anna Vans</h1>
+    <h2>Front-End Developer from Slovakia</h2>
+  </body>
 </html>
