--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <img src="/imgs/profile.jpg" alt="Profile picture" width="30px" />
       <a class="navbar-brand" href="#">Anna Vans</a>
       <button
