--- a/index.html
+++ b/index.html
@@ -49,9 +49,14 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <img src="/imgs/profile.jpg" alt="Profile picture" width="30px" />
-      <a class="navbar-brand" href="#">Anna Vans</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
+      <img
+        src="/imgs/profile.jpg"
+        alt="Profile picture"
+        class="profile-picture"
+        width="60px"
+      />
+      <a class="navbar-brand" href="/">Anna Vans</a>
       <button
         class="navbar-toggler"
         type="button"
