--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <img
         src="/imgs/profile.jpg"
         alt="Profile picture"
-        class="profile-picture"
+        class="img-fluid profile-picture"
         width="60px"
       />
       <a class="navbar-brand" href="/">Anna Vans</a>
@@ -95,5 +95,8 @@
     <h2>Welcome,</h2>
     <h1>I'm Anna Vans</h1>
     <h2>Front-End Developer from Slovakia</h2>
+    <a href="/contact.html" title="Contact me" class="contact-button"
+      >Let's get in touch</a
+    >
   </body>
 </html>
