--- a/index.html
+++ b/index.html
@@ -34,10 +34,28 @@
       src="https://kit.fontawesome.com/028b7452d5.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;200;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Questrial&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
+      <img
+        src="imgs/profile.jpg"
+        alt="Profile picture"
+        class="profile-picture"
+        width="50px"
+      />
       <a class="navbar-brand" href="/">Anna Vans</a>
       <button
         class="navbar-toggler"
@@ -64,7 +82,11 @@
             href="/mywork.html"
             >What I do</a
           >
-          <a class="nav-item nav-link" title="Contact info" href="/contact.html"
+          <a
+            class="nav-item nav-link"
+            title="Contact info
+          "
+            href="/contact.html"
             >Contact me</a
           >
         </div>
@@ -72,6 +94,9 @@
     </nav>
     <h2>Welcome, I'm</h2>
     <h1>Anna Vans</h1>
-    <h2>Frond-End developer, passionate about creating websites</h2>
+    <h3>Front-End Developer based in Europe</h3>
+    <a href="/mywork.html" title="My work portfolio" class="my-projects-link"
+      >Check my work</a
+    >
   </body>
 </html>
