basic contact page structured

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       <img
         src="imgs/profile.jpg"
         alt="Profile picture"
-        class="profile-picture"
-        width="50px"
+        class="img-fluid profile-picture"
+        width="40px"
       />
       <a class="navbar-brand" href="/">Anna Vans</a>
       <button
-        class="navbar-toggler"
+        class="navbar-toggler navbar-dark"
         type="button"
         data-toggle="collapse"
         data-target="#navbarNavAltMarkup"
@@ -70,7 +70,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#"
+          <a class="nav-item nav-link active" href="/" title="Homepage"
             >Homepage <span class="sr-only">(current)</span></a
           >
           <a class="nav-item nav-link" title="About me" href="/about.html"
