contact text styled

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container about-section">
       <div class="row">
         <div class="col-sm-6">
           <img
@@ -111,15 +111,20 @@
             and I work every day to improve my skills. Check out my latest
             projects! Here are a few technologies I've been working with
             recently:
-            <div class="row">
-              <div class="col-6">
-                <div class="technologies">HTML CSS JavaScript</div>
-                <div class="col-6">
-                  <div class="technologies">
-                    Responsive web development React
-                  </div>
-                </div>
-              </div>
+          </div>
+          <div class="row">
+            <div class="col highlight">
+              <i class="fa-regular fa-keyboard"></i> HTML
+            </div>
+            <div class="col highlight">
+              <i class="fa-regular fa-keyboard"></i> CSS
+            </div>
+            <div class="w-100"></div>
+            <div class="col highlight">
+              <i class="fa-regular fa-keyboard"></i> Java Scrips
+            </div>
+            <div class="col highlight">
+              <i class="fa-regular fa-keyboard"></i> React
             </div>
           </div>
         </div>
