contact page text added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <h2>Welcome, I'm</h2>
     <h1>Anna Vans</h1>
     <h3>Front-End Developer based in Europe</h3>
-    <a href="/mywork.html" title="My work portfolio" class="my-projects-link"
+    <a href="/mywork.html" title="My work portfolio" class="highlighted-link"
       >Check my work</a
     >
   </body>
