--- a/certificates.html
+++ b/certificates.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anna Vans - Front-End Developer from Slovakia, Europe</title>
+    <title>My knowledge portfolio</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -98,11 +98,9 @@
         </div>
       </div>
     </nav>
-    <h2>Welcome, I'm</h2>
-    <h1>Anna Vans</h1>
-    <h3>Front-End Developer based in Europe</h3>
-    <a href="/mywork.html" title="My work portfolio" class="highlighted-link"
-      >Check my work</a
-    >
+
+    <div certificates-page>
+      <h1>Let's get in touch!</h1>
+    </div>
   </body>
 </html>
