--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me page page</title>
+    <title>Contact page</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
@@ -81,6 +81,12 @@
             title="My work portfolio"
             href="/mywork.html"
             >What I do</a
+          >
+          <a
+            class="nav-item nav-link"
+            title="My knowledge backround"
+            href="/certificates.html"
+            >Certificates</a
           >
           <a
             class="nav-item nav-link"
