content of certificate page added

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
           <img
             src="/imgs/profile.jpg"
             alt="Profile picture"
-            class="aboutme-picture"
+            class="aboutme-picture img-fluid"
             width="300px"
           />
         </div>
