--- a/certificates.html
+++ b/certificates.html
@@ -99,8 +99,30 @@
       </div>
     </nav>
 
-    <div certificates-page>
-      <h1>Let's get in touch!</h1>
+    <div class="certificates-page">
+      <h1>My knowledge backround</h1>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <img
+              src="/imgs/result1.png"
+              alt="SheCodes certificate"
+              class="img-fluid certificate-img"
+              width="300px"
+            />
+          </div>
+
+          <div class="col-sm-6">
+            <img
+              src="/imgs/result2.png"
+              alt="SheCodes Certificate"
+              class="img-fluid certificate-img"
+              width="300px"
+            />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
