project section added

--- a/mywork.html
+++ b/mywork.html
@@ -98,5 +98,47 @@
         </div>
       </div>
     </nav>
+
+    <div class="container project-section">
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/imgs/project3.png"
+            alt="Beauty-brand project"
+            class="img-fluid rounded project-img"
+            width="500px"
+          />
+        </div>
+        <div class="col-sm-6">
+          <div class="project-text">
+            <h4>Beauty-brand project</h4>
+            <br />
+            Pure HTML and CSS project focused on user comfort, clarity and clean
+            lines. Fully responsive website for a ByRedo brand was a perfect
+            opportunity to test my HTML a CSS skills!
+          </div>
+        </div>
+        <div class="row section-2">
+          <div class="col-sm-6">
+            <div class="project-text">
+              <h4>Weather-forecast project</h4>
+              <br />
+              Weather-forecast project is simple but fully working forecast with
+              real data in real time. Check the forecast in your current city or
+              anywhere you would love to be right now! Java Script and API will
+              do their job!
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="/imgs/project2.png"
+              alt="Weather-forecast project"
+              class="img-fluid rounded project-img"
+              width="500px"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
