--- a/mywork.html
+++ b/mywork.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <img
         src="imgs/profile.jpg"
         alt="Profile picture"
@@ -109,6 +109,7 @@
             width="500px"
           />
         </div>
+
         <div class="col-sm-6">
           <div class="project-text">
             <h4>Beauty-brand project</h4>
@@ -116,6 +117,9 @@
             Pure HTML and CSS project focused on user comfort, clarity and clean
             lines. Fully responsive website for a ByRedo brand was a perfect
             opportunity to test my HTML a CSS skills!
+            <br />
+            <i class="fa-brands fa-github highlight"></i>
+            <i class="fa-solid fa-link highlight"></i>
           </div>
         </div>
         <div class="row section-2">
@@ -127,6 +131,13 @@
               real data in real time. Check the forecast in your current city or
               anywhere you would love to be right now! Java Script and API will
               do their job!
+              <br />
+              <i class="fa-brands fa-github highlight"> </i
+              ><a
+                href="https://github.com/AnnaVans/first-project"
+                title="Github"
+              ></a>
+              <i class="fa-solid fa-link highlight"></i>
             </div>
           </div>
           <div class="col-sm-6">
