--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <img
         src="imgs/profile.jpg"
         alt="Profile picture"
