--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
         </div>
       </div>
     </nav>
-    <h2>Welcome, I'm</h2>
-    <h1>Anna Vans</h1>
-    <h3>Front-End Developer based in Europe</h3>
-    <a href="/mywork.html" title="My work portfolio" class="highlighted-link"
-      >Check my work</a
-    >
+    <div class="homepage-section">
+      <h2>Welcome, I'm</h2>
+      <h1>Anna Vans</h1>
+      <h3>Front-End Developer based in Europe</h3>
+      <a href="/mywork.html" title="My work portfolio" class="highlighted-link"
+        >Check my work</a
+      >
+    </div>
   </body>
 </html>
