--- a/mywork.html
+++ b/mywork.html
@@ -118,8 +118,20 @@
             lines. Fully responsive website for a ByRedo brand was a perfect
             opportunity to test my HTML a CSS skills!
             <br />
-            <i class="fa-brands fa-github highlight"></i>
-            <i class="fa-solid fa-link highlight"></i>
+            <a
+              href="https://github.com/AnnaVans/beautybrand-project"
+              title="Github"
+              target="_blank"
+              ><i class="fa-brands fa-github highlight"></i
+            ></a>
+
+            <a
+              href="https://heartfelt-flan-397980.netlify.app/"
+              title="External link"
+              target="_blank"
+            >
+              <i class="fa-solid fa-link highlight"></i
+            ></a>
           </div>
         </div>
         <div class="row section-2">
@@ -132,12 +144,21 @@
               anywhere you would love to be right now! Java Script and API will
               do their job!
               <br />
-              <i class="fa-brands fa-github highlight"> </i
-              ><a
+
+              <a
                 href="https://github.com/AnnaVans/first-project"
                 title="Github"
+                target="_blank"
+                ><i class="fa-brands fa-github highlight"></i
               ></a>
-              <i class="fa-solid fa-link highlight"></i>
+
+              <a
+                href="https://poetic-seahorse-f9c6ef.netlify.app/"
+                title="External link"
+                target="_blank"
+              >
+                <i class="fa-solid fa-link highlight"></i
+              ></a>
             </div>
           </div>
           <div class="col-sm-6">
