--- a/mywork.html
+++ b/mywork.html
@@ -112,7 +112,7 @@
 
         <div class="col-sm-6">
           <div class="project-text">
-            <h4>Beauty-brand project</h4>
+            <h4>Beautybrand project</h4>
             <br />
             Pure HTML and CSS project focused on user comfort, clarity and clean
             lines. Fully responsive website for a ByRedo brand was a perfect
