--- a/mywork.html
+++ b/mywork.html
@@ -105,7 +105,7 @@
           <img
             src="/imgs/project3.png"
             alt="Beauty-brand project"
-            class="img-fluid rounded project-img"
+            class="img-fluid rounded project-img d-none d-sm-block"
             width="500px"
           />
         </div>
@@ -165,7 +165,7 @@
             <img
               src="/imgs/project2.png"
               alt="Weather-forecast project"
-              class="img-fluid rounded project-img"
+              class="img-fluid rounded project-img d-none d-sm-block"
               width="500px"
             />
           </div>
