text in my work section responsive

--- a/mywork.html
+++ b/mywork.html
@@ -114,9 +114,11 @@
           <div class="project-text">
             <h4>Beautybrand project</h4>
             <br />
-            Pure HTML and CSS project focused on user comfort, clarity and clean
-            lines. Fully responsive website for a ByRedo brand was a perfect
-            opportunity to test my HTML a CSS skills!
+            <p>
+              Pure HTML and CSS project focused on user comfort, clarity and
+              clean lines. Fully responsive website for a ByRedo brand was a
+              perfect opportunity to test my HTML a CSS skills!
+            </p>
             <br />
             <a
               href="https://github.com/AnnaVans/beautybrand-project"
@@ -139,10 +141,12 @@
             <div class="project-text">
               <h4>Weather-forecast project</h4>
               <br />
-              Weather-forecast project is simple but fully working forecast with
-              real data in real time. Check the forecast in your current city or
-              anywhere you would love to be right now! Java Script and API will
-              do their job!
+              <p>
+                Weather-forecast project is simple but fully working forecast
+                with real data in real time. Check the forecast in your current
+                city or anywhere you would love to be right now! Java Script and
+                API will do their job!
+              </p>
               <br />
 
               <a
