--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
       </div>
     </nav>
     <div class="contact-page-info">
-      <h1>Let's get in touch!</h1>
+      <h1>Let's work together!</h1>
       <div class="contact-text">
         I love new opportunities and I'm always open to learn new stuff! If you
         have any question, inquiry or just want to say hello,
