--- a/index.html
+++ b/index.html
@@ -88,11 +88,7 @@
             href="/certificates.html"
             >Certificates</a
           >
-          <a
-            class="nav-item nav-link"
-            title="Contact info
-          "
-            href="/contact.html"
+          <a class="nav-item nav-link" title="Contact info" href="/contact.html"
             >Contact me</a
           >
         </div>
