--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <img
-        src="imgs/profile.jpg"
+        src="imgs/008.jpg"
         alt="Profile picture"
         class="img-fluid profile-picture"
         width="40px"
@@ -102,7 +102,7 @@
       <div class="row">
         <div class="col-sm-6">
           <img
-            src="/imgs/profile.jpg"
+            src="/imgs/008.jpg"
             alt="Profile picture"
             class="aboutme-picture img-fluid"
             width="300px"
