--- a/certificates.html
+++ b/certificates.html
@@ -51,7 +51,7 @@
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-custom">
       <img
-        src="imgs/profile.jpg"
+        src="imgs/008.jpg"
         alt="Profile picture"
         class="img-fluid profile-picture"
         width="40px"
